test/samples/invalid/resolving/missing_id.maruir
fun foo(a: u8)
locals b: u8;
{
    entry:
        b := a + c;
        return;
}
